fix hover overflow

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         background-position: center;
         padding: 0 !important;
         float: left;
+        overflow: hidden;
       }
 
       .project-2 {
